# grid-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  gridsociety_mvp.md
examples/: feeder_10kv.json  gridsociety_incident.json
src/grid_agent/: __init__.py  cli.py  demo.py  diagnosis.py  model.py  society.py  topology.py
tests/: test_diagnosis.py  test_society.py
