[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "grid-agent"
version = "0.1.0"
description = "Tree-structured 10 kV feeder fault diagnosis and power-system agent toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "paperplane123" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
grid-agent = "grid_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grid_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
